# single-delegation-validation

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs
common/src/pallets/: dpos.rs  mod.rs
pallets/dpos/: Cargo.toml
pallets/dpos/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
